Aligning dropdown menus correctly

--- a/frontend/css/header.css
+++ b/frontend/css/header.css
@@ -58,10 +58,10 @@
 }
 
 #navbar ul.dropdown-menu {
-    position: absolute;
-    top: 100px;
     left: 0;
-    width: auto;
+    min-width: 100%;
+    position: absolute;
+    top: 50px;
 }
 
 #navbar li.submenu {
